--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 	border: 2px solid black;
 	width: 480px;
 } */
-.first_con{
+/* .first_con{
 	margin: 20px;
 	border: 15px solid blue;
 	width: 400px;
@@ -13,4 +13,12 @@
 	padding: 50px;
 	background-color: lightblue;
 	width: 300px;
-}
+} */
+.box {
+            width: 300px;
+            background-color: lightblue;
+            border: 15px solid blue;
+            padding: 50px;
+            margin: 20px;
+            box-sizing: border-box;
+        }
